--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="alurastart logo 1.png" alt="logo da alura start">
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">FUTEBOL</li>
+            <li class="cabecalho-lista-item">Alan Filippi do Prado</li>
+        </ul>
+    </header>   
 
+    <section class="escola">
+        <div class="escola-div-conteudo">
+            <h2 class="escola-titulo">Sobre a Escola</h2>
+            <p class="escola-texto-um"></p>   A escola de futebol foi criada em 2015 na cidade de Pato branco e é o centro dos esportes do paraná mais conhecido como Ginásio brancão.
+            <p class="escola-texto-dois"></p>  E conta com um amplo espaço para praticar esportes e fazer campeonatos e treinos para as crianças e adolescentes.
+        </div>
+        <img class="escola-imagem" src="Formula-bro.png" alt="Professora no quadro">
+    </section>
 
 </body>
 </html>
